edited css for img

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3010,6 +3010,8 @@ input, select, textarea {
 			display: block;
 			position: relative;
 			width: 100em;
+			background-repeat: no-repeat;
+			background-size: 100% 100%;
 		}
 
 			.spotlights > section > .image img {
@@ -3047,7 +3049,7 @@ input, select, textarea {
 			-webkit-justify-content: center;
 			-ms-justify-content: center;
 			justify-content: center;
-			width: 40em;
+			width: 55em;
 			/* -ms-flex: 1; */
 		}
 
