added resume in contact

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2808,6 +2808,7 @@ input, select, textarea {
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
+		/* margin-bottom:10px */
 	}
 
 		ul.icons li {
